option('testmode', type: 'boolean', value: false,
  description: 'Build with whitebox testing hooks exposed')

option('stubsmode', type: 'boolean', value: false,
  description: 'Link the jit code with Tcl via stubs')

option('benchmark', type: 'feature', value: 'disabled',
  description: 'Enable benchmarks (auto: enable if all deps are found)')
